@@ -297,11 +297,21 @@ sub compile {
         $do_compile = 1;
       }
       else {
+        # Source file modified time is newer than object file
         my $mod_time_src = (stat($src_file))[9];
         my $mod_time_object = (stat($object_file))[9];
-        
         if ($mod_time_src > $mod_time_object) {
           $do_compile = 1;
+        }
+        else {
+          # Config file modified time is newer than object file
+          if (-f $config_file) {
+            my $mod_time_config = (stat($config_file))[9];
+            my $mod_time_object = (stat($object_file))[9];
+            if ($mod_time_config > $mod_time_object) {
+              $do_compile = 1;
+            }
+          }
         }
       }
     }
